--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 About Us
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">About Us 1</a></li>
+                <li><a class="dropdown-item" href="./about.html">About Us 1</a></li>
                 <li><a class="dropdown-item" href="#">About Us 2</a></li>
               </ul>
             </li>
