--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Embassy</title>
 </head>
 <body>
@@ -77,6 +78,54 @@
       </div>
     </nav>
   </header>
+
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./img/img1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="animated bounceInRight" style="animation-delay:1s">Creative Agency</h2>
+          <p class="animated bounceInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+            assumenda fugiat vel passet
+          </p>
+          <p class="animated bounceInRight" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./img/img2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="animated slideInDown" style="animation-delay: 1s">Reputed Worldwide</h2>
+          <p class="animated fadeInUp" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+            assumenda fugiat vel passet
+          </p>
+          <p class="animated zoomIn" style="animation-delay: 3s"><a href="#">Contact Us</a></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="./img/img3.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2 class="animated zoomIn" style="animation-delay: 1s">Multiple Awards</h2>
+          <p class="animated fadeInLeft" style="animation-delay: 2s">lore ipsum dolor sit amet, consectetur adipiscing elit. Quibusdam, eos libero.
+            assumenda fugiat vel passet
+          </p>
+          <p class="animated zoomIn"><a href="#">Contact Us</a></p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
   <footer>
     <div class="container">
