--- a/about.html
+++ b/about.html
@@ -72,7 +72,6 @@
               </div>
               <div class="social_icon">
                 <i class="fa fa-google " aria-hidden="true"></i>
-  
               </div>
             </ul>
           </div>
@@ -83,9 +82,23 @@
   
   <main>
     <div class="about-panel">
-        <img src="./img/img1.jpg" alt="" class="hero-image" width="100%">
-        <h1 class="hero-img-title">About Us</h1>
-    </div>
+            <img src="./img/img1.jpg" alt="" class="hero-image" width="100%">
+            <h1 class="hero-img-title">About Us</h1>
+        </div>
+        <section>
+            <div class="about-company">
+            <div class="container">
+                <div class="about-section" >
+                    <div class="inner-container">
+                        <h1>About Nepali Team</h1>
+                        <p class="text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
   </main>
 
   <footer>
