--- a/about.html
+++ b/about.html
@@ -84,9 +84,9 @@
     <div class="about-panel">
             <img src="./img/img1.jpg" alt="" class="hero-image" width="100%">
             <h1 class="hero-img-title">About Us</h1>
-        </div>
-        <section>
-            <div class="about-company">
+    </div>
+    <section>
+        <div class="about-company">
             <div class="container">
                 <div class="about-section" >
                     <div class="inner-container">
@@ -98,6 +98,24 @@
                 </div>
             </div>
         </div>
+        <div class="about-founder">
+            <div class="container">
+                <div class="row">
+                    <h1>About President KB Shrestha</h1>
+                    <div class="col-sm">
+                        <p class="president-description">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione id, sequi libero enim illo perferendis perspiciatis quae laudantium nemo voluptatum non repudiandae impedit nostrum fugiat voluptas maiores iste dolorem pariatur!
+                        </p>
+                        <p class="president-description-sub">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quis mollitia quos labore vero explicabo praesentium architecto minus dolorum officiis. Voluptates vero aperiam dolorum doloremque cum quas rerum sapiente assumenda.
+                        </p>
+                    </div>
+                    <div class="col-sm">
+                        <img src="./img/img2.jpg" alt="" class="president-img" width="100%">
+                    </div>
+                </div>
+        </div>
+    </div>
     </section>
   </main>
 
