--- a/index.html
+++ b/index.html
@@ -127,6 +127,39 @@
     </button>
   </div>
 
+  <section class="counter-section">
+    <div class="container">
+      <div class="fact-box">
+        <div class="row">
+          <div class="col-lg col-6 single-fact">
+            <i class="fa fa-university fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">200</h2>
+            <p>Affiliated University</p>
+          </div>
+          <div class="col-lg col-6 single-fact">
+            <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">100</h2>
+            <p>Graduated</p>
+          </div>
+          <div class="col-lg col-6 single-fact">
+            <i class="fa fa-shield fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">100</h2>
+            <p>People applied successfully</p>
+          </div>
+          <div class="col-lg col-6 single-fact">
+            <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">100</h2>
+            <p>Followers</p>
+          </div>
+          <div class="col-lg col-6 single-fact">
+            <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
+            <h2 class="count" data-target="200">100</h2>
+            <p>Friends</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <div class="sec aboutus">
@@ -175,7 +208,9 @@
   <div class="copyrightText">
     <p>Copyright Ⓒ GLOBEL IOT. All rights reserved</p>
   </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
