--- a/about.html
+++ b/about.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
+    <!-- carousel -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/nav_footer.css">
     <link rel="stylesheet" href="./css/about.style.css">
+
     <title>Embassy</title>
 </head>
 <body>
@@ -125,6 +131,37 @@
                 </div>
         </div>
     </div>
+    <div class="about-experts id="bg-color">
+      <div class="container">
+            <div class="expert-title">
+              <h1 class="expert-title">Our Expert</h1>
+            </div>
+            <div class="row owl-carousel">
+              <div class="col">
+                <img src="./img/img1.jpg" alt="Users Photo" class="about-img" id="img14" style="visibility:visible">
+                <p class="users-name">Shiva Giri</p>
+                <p class="job-title">JOb Title</p>
+              </div>
+              <div class="col">
+                <img src="./img/img2.jpg" alt=" Users Photo " class="about-img" id="img15" style="visibility:visible">
+                <p class="users-name">Nirmal Thing</p>
+                <p class="job-title">JOb Title</p>
+                <!-- <p class="testimonial-description">I’m writing to ask if you wouldn’t mind giving us a short testimonial for our website.</p> -->
+              </div>
+              <div class="col">
+                <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img16" style="visibility:visible">
+                  <p class="users-name">Lalit BC</p>
+                  <p class="job-title">JOb Title</p>
+              </div>
+              <div class="col">
+                <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img17" style="visibility:visible">
+                  <p class="users-name">Nutan Panta</p>
+                  <p class="job-title">JOb Title</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
@@ -176,8 +213,9 @@
     <p>Copyright Ⓒ GLOBEL IOT. All rights reserved</p>
   </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/about.js"></script>
 </body>
 </html>
