--- a/about.html
+++ b/about.html
@@ -88,7 +88,13 @@
   
   <main>
     <div class="about-panel">
-            <img src="./img/img1.jpg" alt="" class="hero-image" width="100%">
+            <div class="hero-image" style="background: url('./img/img1.jpg'); background-position: center center;
+            background-repeat: no-repeat;
+            background-attachment:fixed;
+            background-size: cover;
+            height:70vh;
+            filter: brightness(55%);
+            "> </div>
             <h1 class="hero-img-title">About Us</h1>
     </div>
     <section>
