--- a/about.html
+++ b/about.html
@@ -168,6 +168,20 @@
           </div>
         </div>
       </div>
+      <div class="counselling">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm">
+              <h1 class="book-free-counselling">
+                Book Free Counselling
+              </h1>
+              <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
+              <button class="book-a-session">Book a Session</button>
+              <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
 
