--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.css" integrity="sha512-eeBbzvdY28BPYqEsAv4GU/Mv48zr7l0cI6yhWyqhgRoNG3sr+Q2Fr6751bA04Cw8SGUawtVZlugHm5H1GOU/TQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Embassy</title>
 </head>
@@ -212,7 +213,59 @@
           
         </div>
     </div>
-</section>
+  </section>
+
+
+  <section>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg">
+            <div class="section-title"><h2>Latest News</h2></div>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="blog slider">
+    <div class="swiper-wrapper">
+      <div class="slider-item swiper-slide">
+        <div class="slider-img">
+          <img src="./img/img1.jpg" />
+        </div>
+        <div class="content">
+          <div class="title">Test title</div>
+          <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo non porro consequatur modi reiciendis a ullam cum numquam velit, vitae recusandae voluptate reprehenderit debitis iste fuga deserunt nam placeat voluptatibus!</div>
+          <span class="time">2 june 2020</span>
+          <a href="#" class="Button">Read More</a>
+        </div>
+      </div>
+      <div class="slider-item swiper-slide">
+        <div class="slider-img">
+          <img src="./img/img2.jpg" />
+        </div>
+        <div class="content">
+          <div class="title">Test title 1</div>
+          <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, possimus cum incidunt natus aliquam illum sed dolores reprehenderit inventore dolore laborum pariatur atque velit aliquid ex magnam! Laborum, perspiciatis repudiandae.</div>
+          <span class="time">2 june 2020</span>
+          <a href="#" class="Button">Read More</a>
+        </div>
+      </div>
+
+      <div class="slider-item swiper-slide">
+        <div class="slider-img">
+          <img src="./img/img3.jpg" />
+        </div>
+        <div class="content">
+          <div class="title">Test title 2</div>
+          <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur minus id tempora soluta similique autem corporis qui cumque ab corrupti maiores suscipit ipsa impedit eius sint, natus voluptatibus odio eligendi.</div>
+          <span class="time">2 june 2020</span>
+          <a href="#" class="Button">Read More</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="slider-pagination"></div>
+  </div>
+  </section>
 
   <footer>
     <div class="container">
@@ -266,6 +319,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js" integrity="sha512-sAHYBRXSgMOV2axInO6rUzuKKM5SkItFLlLHQ8YjRD+FBwowtATOs4njP9oim3/MzyAGrB52SLDjpAOLcOT9TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
 </body>
