--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
-    <!-- Font -->
-    <script src="https://kit.fontawesome.com/5fe61622a5.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="./css/nav_footer.css">
     <link rel="stylesheet" href="./css/contact.css">
@@ -64,7 +62,7 @@
                 <a class="nav-link" href="#">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contact Us</a>
+                <a class="nav-link" href="#">Contact Us</a>
               </li>
             </ul>
             <ul class="navbar-nav ms-auto social_icons">
@@ -97,7 +95,7 @@
       ></iframe>
     </section>
     <!-- Contact Form start -->
-    <section class="contact mb-5" style="border-radius: 5px">
+    <section class="contact-us mb-5" style="border-radius: 5px">
       <div class="container">
         <div class="title">
           <h1>Contact Form</h1>
