--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="#">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="./contact.html">Contact Us</a>
               </li>
             </ul>
             <ul class="navbar-nav ms-auto social_icons">
