--- a/service.html
+++ b/service.html
@@ -86,20 +86,16 @@
         <section>
             <div class="row">
                 <div class="col-sm">
-                    <img src="./img/img4.jpg" alt="" width="100%">
+                    <img src="./img/img4.jpg" alt="" class="hero-img" width="100%">
                 </div>
                 <div class="col-sm">
-                    <h1>Test Preparation for Abroad Studies</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p>Best Class in Tow</p>
-                    <div class="row">
-                        <div class="col">
-                            <p>Prepartation for Ielts</p>
-                        </div>
-                        <div class="col">
-                            Preparation for PTE
-                        </div>
+                    <h1 class="hero-section-title">Test Preparation for Abroad Studies</h1>
+                    <p class="hero-section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                    <p class="hero-section-description">Best Class in Tow</p>
+                    <div class="col-sm">
+                        <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> IELTS </Strong> or <Strong class="hero-course-title"> PTE </Strong> </p>
                     </div>
+                    <button>Join Now</button>
                 </div>
             </div>
         </section>
