--- a/service.html
+++ b/service.html
@@ -91,11 +91,11 @@
                 <div class="col-sm">
                     <h1 class="hero-section-title">Test Preparation for Abroad Studies</h1>
                     <p class="hero-section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-                    <p class="hero-section-description">Best Class in Tow</p>
+                    <p class="hero-section-description-sub">Best Class in Tow</p>
                     <div class="col-sm">
                         <p class="hero-course-subject">Prepartation for <Strong class="hero-course-title"> IELTS </Strong> or <Strong class="hero-course-title"> PTE </Strong> </p>
                     </div>
-                    <button>Join Now</button>
+                    <button class="hero-join-now-button">Join Now</button>
                 </div>
             </div>
         </section>
