--- a/service.html
+++ b/service.html
@@ -44,7 +44,7 @@
                       Our Services
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Service 1</a></li>
+                      <li><a class="dropdown-item" href="./service.html">Service 1</a></li>
                       <li><a class="dropdown-item" href="#">Service 2</a></li>
                     </ul>
                   </li>
