--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Visa Facts
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Visa 1</a></li>
+                <li><a class="dropdown-item" href="./visfact.html">Visa 1</a></li>
                 <li><a class="dropdown-item" href="#">Visa 2</a></li>
               </ul>
             </li>
