Adding message from CEO

--- a/mesagefromceo.html
+++ b/mesagefromceo.html
@@ -38,6 +38,8 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="./about.html">About Company</a></li>
+                  <!-- <li><a class="dropdown-item" href="./about.html">oUR tEAM</a></li> -->
+                  
                   <li><a class="dropdown-item" href="./mesagefromceo.html">Message From CEO</a></li>
                 </ul>
               </li>
@@ -102,7 +104,7 @@
             <div class="container">
                 <div class="about-section" >
                     <div class="inner-container">
-                        <h1>About Company</h1>
+                        <h1>Message From CEO</h1>
                         <p class="text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus velit ducimus, enim inventore earum, eligendi nostrum pariatur necessitatibus eius dicta a voluptates sit deleniti autem error eos totam nisi neque voluptates sit deleniti autem error eos totam nisi neque.
                         </p>
