Adding message from CEO

--- a/mesagefromceo.html
+++ b/mesagefromceo.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/nav_footer.css">
-    <link rel="stylesheet" href="./css/about.style.css">
+    <link rel="stylesheet" href="./css/messagefromceo.css">
 
     <title>Embassy</title>
 </head>
@@ -100,7 +100,7 @@
             <h1 class="hero-img-title">About Us</h1>
     </div>
     <section>
-        <div class="about-company">
+        <!-- <div class="about-company">
             <div class="container">
                 <div class="about-section" >
                     <div class="inner-container">
@@ -117,8 +117,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- <div class="about-founder">
+        </div> -->
+        <div class="about-founder">
             <div class="container">
                 <div class="row">
                     <h1>About President KB Shrestha</h1>
@@ -134,11 +134,11 @@
                         </p>
                     </div>
                     <div class="col-sm">
-                        <img src="./img/img2.jpg" alt="" class="president-img" width="100%">
+                        <img src="./img/img4.jpg" alt="" class="president-img" width="100%">
                     </div>
                 </div>
         </div>
-    </div> -->
+    </div>
     <div class="about-experts id="bg-color">
       <div class="container">
             <div class="expert-title">
