Adding message from CEO

--- a/mesagefromceo.html
+++ b/mesagefromceo.html
@@ -97,7 +97,7 @@
             height:70vh;
             filter: brightness(55%);
             "> </div>
-            <h1 class="hero-img-title">About Us</h1>
+            <h1 class="hero-img-title">Message From CEO</h1>
     </div>
     <section>
         <!-- <div class="about-company">
@@ -121,7 +121,7 @@
         <div class="about-founder">
             <div class="container">
                 <div class="row">
-                    <h1>About President KB Shrestha</h1>
+                    <h1>Message From CEO</h1>
                     <div class="col-sm">
                         <p class="president-description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione id, sequi libero enim illo perferendis perspiciatis quae laudantium nemo voluptatum non repudiandae impedit nostrum fugiat voluptas maiores iste dolorem pariatur!
