Adding message from CEO

--- a/service.html
+++ b/service.html
@@ -107,28 +107,57 @@
         </section>
         <section>
           <div class="container">
-            <div class="expert-title">
-              <h1 class="expert-title">Universities & Colleges</h1>
+             <div class="expert-title">
+               <h1 class="expert-title">Universities & Colleges</h1>
+             </div>
+             <div class="row owl-carousel">
+               <div class="col">
+                 <img src="./img/img1.jpg" alt="Users Photo" class="about-img" id="img14" style="visibility:visible">
+               </div>
+               <div class="col">
+                 <img src="./img/img2.jpg" alt=" Users Photo " class="about-img" id="img15" style="visibility:visible">
+                 <!-- <p class="testimonial-description">I’m writing to ask if you wouldn’t mind giving us a short testimonial for our website.</p> -->
+               </div>
+               <div class="col">
+                 <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img16" style="visibility:visible">
+               </div>
+               <div class="col">
+                 <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img17" style="visibility:visible">
+               </div>
+             </div>
+           </div>
+           </div>
+         </div>
+       </section> 
+        <section>
+          <div class="container">
+          <h1 class="expert-title">Courses</h1>
+          <div class="course-row">
+            <div class="course-col">
+              <div class="course-description">
+                <h1 class="course-title" >English for Begginers</h1>
+              <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
+              <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              <button class="hero-join-now-button">Enroll Now</button>
+              </div>
+              <div class="course-description">
+                <img src="./img/img4.jpg" alt="">
+              </div>
             </div>
-            <div class="row owl-carousel">
-              <div class="col">
-                <img src="./img/img1.jpg" alt="Users Photo" class="about-img" id="img14" style="visibility:visible">
+            <div class="course-col">
+              <div class="course-description">
+                <h1 class="course-title" >English for Begginers</h1>
+              <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
+              <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              <button class="hero-join-now-button">Enroll Now</button>
               </div>
-              <div class="col">
-                <img src="./img/img2.jpg" alt=" Users Photo " class="about-img" id="img15" style="visibility:visible">
-                <!-- <p class="testimonial-description">I’m writing to ask if you wouldn’t mind giving us a short testimonial for our website.</p> -->
-              </div>
-              <div class="col">
-                <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img16" style="visibility:visible">
-              </div>
-              <div class="col">
-                <img src="./img/img3.jpg" alt="Users Photo" class="about-img" id="img17" style="visibility:visible">
+              <div class="course-description">
+                <img src="./img/img4.jpg" alt="">
               </div>
             </div>
-          </div>
           </div>
         </div>
-      </section>
+        </section>
       <section>
         <div class="container">
           <div class="row">
