Adding ourteam Pages

--- a/service.html
+++ b/service.html
@@ -155,6 +155,28 @@
                 <img src="./img/img4.jpg" alt="">
               </div>
             </div>
+            <div class="course-col">
+              <div class="course-description">
+                <h1 class="course-title" >English for Begginers</h1>
+              <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
+              <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              <button class="hero-join-now-button">Enroll Now</button>
+              </div>
+              <div class="course-description">
+                <img src="./img/img4.jpg" alt="">
+              </div>
+            </div>
+            <div class="course-col">
+              <div class="course-description">
+                <h1 class="course-title" >English for Begginers</h1>
+              <p class="course-teacher">By Shiva Giri | March 18, 2021</p>
+              <p class="course-des">Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+              <button class="hero-join-now-button">Enroll Now</button>
+              </div>
+              <div class="course-description">
+                <img src="./img/img4.jpg" alt="">
+              </div>
+            </div>
           </div>
         </div>
         </section>
