Adding ourteam Pages

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                 About Us
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="./about.html">About Us 1</a></li>
-                <li><a class="dropdown-item" href="#">About Us 2</a></li>
+                <li><a class="dropdown-item" href="./about.html">About Company</a></li>
+                <li><a class="dropdown-item" href="./mesagefromceo.html">Meet Our Team</a></li>
+                <li><a class="dropdown-item" href="./mesagefromceo.html">Message From CEO</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
