adding book season

--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
                 Book Free Counselling
               </h1>
               <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
-              <button class="book-a-session">Book a Session</button>
+              <a href=""><button class="book-a-session">Book a Session</button></a>
               <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
             </div>
           </div>
