--- a/service.html
+++ b/service.html
@@ -248,6 +248,20 @@
           </div>
         </div>
         </section>
+        <div class="counselling">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <h1 class="book-free-counselling">
+                  Book Free Counselling
+                </h1>
+                <p class="counselling-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam consequatur ipsum odio dolorum! Laborum ipsa odit ad consequatur rem minima quos, tempora molestiae eligendi, doloribus voluptatum voluptatibus earum consectetur. Iusto.</p>
+                <a href=""><button class="book-a-session">Book a Session</button></a>
+                <p class="email-num-details">Email : example@gamil.com | Number : 9841354543</p>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- <section>
           <div class="container">
              <div class="expert-title">
