Slider and service section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.css" integrity="sha512-eeBbzvdY28BPYqEsAv4GU/Mv48zr7l0cI6yhWyqhgRoNG3sr+Q2Fr6751bA04Cw8SGUawtVZlugHm5H1GOU/TQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.transitions.min.css" integrity="sha512-1rUauSOKExLvRq1W54SZexX5zRJqdYr8imrbspYyy1jLSWYcHqQRej2sBVJU/fhkC8Gu5wT4rEZ/nrSn8IeuhQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css" integrity="sha512-f28cvdA4Bq3dC9X9wNmSx21rjWI+5piIW/uoc2LuQ67asKxfQjUow2MkcCNcfJiaLrHcGbed1wzYe3dlY4w9gA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.css" integrity="sha512-eeBbzvdY28BPYqEsAv4GU/Mv48zr7l0cI6yhWyqhgRoNG3sr+Q2Fr6751bA04Cw8SGUawtVZlugHm5H1GOU/TQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <title>Embassy</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" integrity="sha512-X/RSQYxFb/tvuz6aNRTfKXDnQzmnzoawgEQ4X8nZNftzs8KFFH23p/BA6D2k0QCM4R0sY1DEy9MIY9b3fwi+bg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <title>Embassy</title>
 </head>
 <body>
   <header class="header">
@@ -130,30 +131,20 @@
     <div class="container">
       <div class="fact-box">
         <div class="row">
-          <div class="col-lg col-6 single-fact">
+          <div class="col-lg single-fact">
             <i class="fa fa-university fa-3x" aria-hidden="true"></i>
             <h2 class="count" data-target="200">200</h2>
             <p>Affiliated University</p>
           </div>
-          <div class="col-lg col-6 single-fact">
+          <div class="col-lg single-fact">
             <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
             <h2 class="count" data-target="200">100</h2>
             <p>Graduated</p>
           </div>
-          <div class="col-lg col-6 single-fact">
+          <div class="col-lg single-fact">
             <i class="fa fa-shield fa-3x" aria-hidden="true"></i>
             <h2 class="count" data-target="200">100</h2>
             <p>People applied successfully</p>
-          </div>
-          <div class="col-lg col-6 single-fact">
-            <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
-            <h2 class="count" data-target="200">100</h2>
-            <p>Followers</p>
-          </div>
-          <div class="col-lg col-6 single-fact">
-            <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i>
-            <h2 class="count" data-target="200">100</h2>
-            <p>Friends</p>
           </div>
         </div>
       </div>
@@ -174,10 +165,10 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-desktop"></i>
+                      <i class="fa fa-users" aria-hidden="true"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Unique design</h5>
+                        <h5>Admission Counselling</h5>
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
@@ -187,10 +178,10 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-user"></i>
+                      <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Different Layout</h5>
+                        <h5>Scholarship Information</h5>
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
@@ -200,15 +191,86 @@
             <div class="col-sm-6 col-lg-4">
                 <div class="feature-box-1">
                     <div class="icon">
-                        <i class="fa fa-comment"></i>
+                      <i class="fa fa-file-text-o" aria-hidden="true"></i>
                     </div>
                     <div class="feature-content">
-                        <h5>Make it Simple</h5>
+                        <h5>Student Visa Extension</h5>
                         <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
                     </div>
                 </div>
             </div>
-          
+            
+            <div class="col-sm-6 col-lg-4">
+              <div class="feature-box-1">
+                  <div class="icon">
+                      <i class="fa fa-desktop"></i>
+                  </div>
+                  <div class="feature-content">
+                      <h5>PSW/Temporary Graduate Visa</h5>
+                      <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-sm-6 col-lg-4">
+            <div class="feature-box-1">
+                <div class="icon">
+                  <i class="fa fa-university" aria-hidden="true"></i>
+                </div>
+                <div class="feature-content">
+                    <h5>Course & University Selection</h5>
+                    <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-lg-4">
+          <div class="feature-box-1">
+              <div class="icon">
+                <i class="fa fa-cc-visa" aria-hidden="true"></i>
+              </div>
+              <div class="feature-content">
+                  <h5>Visa Support</h5>
+                  <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+              </div>
+          </div>
+      </div>
+
+      <div class="col-sm-6 col-lg-4">
+        <div class="feature-box-1">
+            <div class="icon">
+              <i class="fa fa-cogs" aria-hidden="true"></i>
+            </div>
+            <div class="feature-content">
+                <h5>Migration Services</h5>
+                <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-lg-4">
+      <div class="feature-box-1">
+          <div class="icon">
+            <i class="fa fa-globe" aria-hidden="true"></i>
+          </div>
+          <div class="feature-content">
+              <h5>Professional Year Program</h5>
+              <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+          </div>
+      </div>
+  </div>
+
+  <div class="col-sm-6 col-lg-4">
+    <div class="feature-box-1">
+        <div class="icon">
+            <i class="fa fa-desktop"></i>
+        </div>
+        <div class="feature-content">
+            <h5>OSHC</h5>
+            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern websites.</p>
+        </div>
+    </div>
+</div>
         </div>
     </div>
   </section>
@@ -269,7 +331,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg">
-          <div class="section-title"><h2>Our Client</h2></div>
+          <div class="section-title"><h2>Our Universities</h2></div>
         </div>
       </div>
        <section class="customer-logos slider">
@@ -284,63 +346,63 @@
        </section>
     </div>
   </section>
- 
-  <section class="testimonial-section container">
-    <div class="row">
-      <div class="col-lg">
-        <div class="section-title"><h2>Testimonials</h2></div>
-      </div>
-    </div>
-    <div class="slider">
-      <div class="slide slide-1">
-        <div class="slide-text">
-          <p class="testimonial-text">
-            “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
-          </p>
-          <p class="author-text">Tanya Sinclair
-            <span>UX Engineer</span></p>
+
+  <section class="box-area">
+    <div class="container">
+
+      <div class="row">
+        <div class="col-lg">
+          <div class="section-title"><h2>Testimonial</h2></div>
         </div>
-        <div class="slide-img">
-          <img src="./img/image-tanya.jpg" alt="img">
+        <div class="col-md-12">
+          <div class="tes-area" id="tes-area">
+            <div class="tes-item">
+              <div class="img-area">
+                <img src="./img/gallery2.jpeg" alt="">
+              </div>
+              <div class="name">Jack Doe</div>
+              <div class="designation">Developer</div>
+              <div class="tes-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
+                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
+                </p>
+              </div>
+            </div>
+
+            <div class="tes-item">
+              <div class="img-area">
+                <img src="./img/image-john.jpg" alt="">
+              </div>
+              <div class="name">Jack Doe</div>
+              <div class="designation">Student</div>
+              <div class="tes-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
+                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
+                </p>
+              </div>
+            </div>
+
+            <div class="tes-item">
+              <div class="img-area">
+                <img src="./img/image-tanya.jpg" alt="">
+              </div>
+              <div class="name">Jack Doe</div>
+              <div class="designation">Developer</div>
+              <div class="tes-text">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus accusantium eaque incidunt unde soluta necessitatibus veniam culpa rem quibusdam, 
+                  alias, repellendus dicta? Dolorum ipsum, impedit suscipit voluptatibus magni esse culpa.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="slide slide-2">
-        <div class="slide-text">
-          <p class="testimonial-text">
-            “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
-          </p>
-          <p class="author-text">John Tarkpor
-            <span>Junior Front-end Developer</span></p>
-        </div>
-        <div class="slide-img">
-          <img src="./img/image-john.jpg" alt="img">
-        </div>
-      </div>
-      <div class="slide slide-3">
-        <div class="slide-text">
-          <p class="testimonial-text">
-            “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
-          </p>
-          <p class="author-text">Tanya Sinclair
-            <span>UX Engineer</span></p>
-        </div>
-        <div class="slide-img">
-          <img src="./img/img1.jpg" alt="img">
-        </div>
-      </div>
-      <div class="buttons">
-        <div class="next"></div>
-        <div class="prev"></div>s
       </div>
     </div>
   </section>
-
+  
   <footer>
     <div class="container">
       <div class="sec aboutus">
@@ -390,7 +452,7 @@
     <p>Copyright Ⓒ  TEC GROUP & Design and Developed by GLOBEL IOT. All rights reserved</p>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js" integrity="sha512-9CWGXFSJ+/X0LWzSRCZFsOPhSfm6jbnL+Mpqo0o8Ke2SYr8rCTqb4/wGm+9n13HtDE1NQpAEOrMecDZw4FXQGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js" integrity="sha512-sAHYBRXSgMOV2axInO6rUzuKKM5SkItFLlLHQ8YjRD+FBwowtATOs4njP9oim3/MzyAGrB52SLDjpAOLcOT9TA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
